--- a/assets/img/gallery/galerie.html
+++ b/assets/img/gallery/galerie.html
@@ -320,7 +320,7 @@
 	<footer>
 	<div class="container">
 	<div class="text-center">
-		<ul>
+    <ul class="ml-3">
 			<li><a href="zone-intervention">Zone d'intervention</a></li>
 			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
