--- a/galerie.html
+++ b/galerie.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -187,107 +187,109 @@
   </div>
 
   <section class="realisation one">
-    <div id="gallery" class="container">
-      <div class="row">
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/635-verandas-alu-1.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/635-verandas-alu-1.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/643-verandas-alu-2.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/643-verandas-alu-2.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/866-verandas-alu-3.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/866-verandas-alu-3.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/795-verandas-alu-4.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/795-verandas-alu-4.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/252-verandas-alu-5.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/252-verandas-alu-5.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/334-verandas-alu-6.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/334-verandas-alu-6.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/289-verandas-alu-7.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/289-verandas-alu-7.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/659-verandas-alu-8.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/659-verandas-alu-8.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/139-verandas-alu-9.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/139-verandas-alu-9.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/776-verandas-alu-10.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/776-verandas-alu-10.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/768-verandas-alu-11.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/768-verandas-alu-11.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/325-verandas-alu-12.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/325-verandas-alu-12.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/316-verandas-alu-13.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/316-verandas-alu-13.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/341-verandas-alu-14.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/341-verandas-alu-14.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/463-verandas-alu-15.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/463-verandas-alu-15.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/808-verandas-alu-16.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/808-verandas-alu-16.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/677-verandas-alu-17.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/677-verandas-alu-17.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/834-verandas-alu-18.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/834-verandas-alu-18.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/393-verandas-alu-19.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/393-verandas-alu-19.jpg" class="img-fluid" alt="">
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 my-3">
-          <a href="./assets/img/gallery/119-verandas-alu-20.jpg" data-toggle="lightbox" data-gallery="gallery">
-            <img src="./assets/img/gallery/119-verandas-alu-20.jpg" class="img-fluid" alt="">
-          </a>
+    <div id="gallery" class="container-fluid">
+      <div class="section">
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/635-verandas-alu-1.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/635-verandas-alu-1.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/643-verandas-alu-2.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/643-verandas-alu-2.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/866-verandas-alu-3.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/866-verandas-alu-3.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/795-verandas-alu-4.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/795-verandas-alu-4.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/252-verandas-alu-5.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/252-verandas-alu-5.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/334-verandas-alu-6.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/334-verandas-alu-6.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/289-verandas-alu-7.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/289-verandas-alu-7.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/659-verandas-alu-8.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/659-verandas-alu-8.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/139-verandas-alu-9.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/139-verandas-alu-9.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/776-verandas-alu-10.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/776-verandas-alu-10.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/768-verandas-alu-11.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/768-verandas-alu-11.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/325-verandas-alu-12.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/325-verandas-alu-12.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/316-verandas-alu-13.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/316-verandas-alu-13.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/341-verandas-alu-14.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/341-verandas-alu-14.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/463-verandas-alu-15.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/463-verandas-alu-15.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/808-verandas-alu-16.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/808-verandas-alu-16.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/677-verandas-alu-17.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/677-verandas-alu-17.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/834-verandas-alu-18.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/834-verandas-alu-18.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/393-verandas-alu-19.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/393-verandas-alu-19.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+            <a href="./assets/img/gallery/119-verandas-alu-20.jpg" data-toggle="lightbox" data-gallery="gallery">
+              <img src="./assets/img/gallery/119-verandas-alu-20.jpg" class="img-fluid" alt="">
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -305,7 +307,7 @@
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
