--- a/les-etapes.html
+++ b/les-etapes.html
@@ -35,14 +35,14 @@
 <meta name="description" content="Découvrez les étapes de construction d'une véranda. De la conception à l'installation, suivez nos étapes pour réaliser votre projet de véranda sur mesure." />
 <meta property="og:description" content="Découvrez les étapes de construction d'une véranda. De la conception à l'installation, suivez nos étapes pour réaliser votre projet de véranda sur mesure." />
 <meta name="keywords" content="Nos étapes" />
-<link rel="canonical" href="http://localhost:4000/les-aides" />
-<meta property="og:url" content="http://localhost:4000/les-aides" />
+<link rel="canonical" href="http://localhost:4000/les-etapes" />
+<meta property="og:url" content="http://localhost:4000/les-etapes" />
 <meta property="og:site_name" content="" />
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"WebSite",
-"url":"http://localhost:4000/les-aides",
+"url":"http://localhost:4000/les-etapes",
 "description":"Découvrez les étapes de construction d'une véranda. De la conception à l'installation, suivez nos étapes pour réaliser votre projet de véranda sur mesure.",
 "name":"Les différentes étapes pour une nouvelle véranda - CFV Véranda"
 }
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link inner-active ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -303,9 +303,9 @@
     <div class="col-md-4 liens">
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
-      <ul>
-        <li class="p"><a href="les-etapes">Les étapes </a></li>
-        <li class="p"><a href="nos-styles">Nos styles</a></li>
+      <ul class="px-0">
+        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
+        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
       </ul>
     </div>
     <div class="col-md-4">
@@ -334,7 +334,7 @@
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
