--- a/nos-styles.html
+++ b/nos-styles.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -187,7 +187,7 @@
 				<p class="p">Les vérandas classiques ont une pente</p>
 				<p class="p">minimum de 8% et leur ossature est</p>
 				<p class="p">entièrement en Aluminium</p>
-                <div style="width: 100%; height: 481px; overflow: hidden; cursor: pointer">
+                <div style="" class="iimmgg">
                     <img src="./assets/img/ver5.jpg" style="width: 100%" alt="veranda 95 des specialistes" loading="lazy">
                 </div>
 			</div>
@@ -196,7 +196,7 @@
 				<p class="p">Les vérandas plates ont une pente</p>
 				<p class="p">minimum de 1% et leur ossature est</p>
 				<p class="p">entièrement en bois lamellé collé</p>
-                <div style="width: 100%; height: 481px; overflow: hidden; cursor: pointer">
+                <div class="iimmgg">
                     <img src="./assets/img/home-gallery-7-960x300.jpg" style="width: 100%" alt="veranda 95 des specialistes" loading="lazy">
                 </div>
 			</div>
@@ -267,8 +267,6 @@
 		<p class="p">Un ou plusieurs dômes vitrés peuvent êtres positionnés, tout alu, les chevrons de celui-ci peuvent recevoir des épaisseurs de vitrages pouvant allées jusqu'à 55mm en triple vitrage de toiture, avec contrôle solaire et gaz argon bi couche.</p>
 		<p class="p">Conçu en chevrons tubulaires avec entretoises hautes et basses pour une meilleure étanchéité à l’air et de serreurs à visser pour assurer un placage supérieur du joint sur le vitrage, une véranda Espace²Vie a été validée conforme aux exigences de perméabilité à l’air de la RT2012.</p>
 
-		<div class="div02"></div>
-
 	</div>
 </section>
     </div>
@@ -283,7 +281,7 @@
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
