--- a/pergolas-classique.html
+++ b/pergolas-classique.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -364,9 +364,9 @@
     <div class="col-md-4 liens">
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
-      <ul>
-        <li class="p"><a href="les-etapes">Les étapes </a></li>
-        <li class="p"><a href="nos-styles">Nos styles</a></li>
+      <ul class="px-0">
+        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
+        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
       </ul>
     </div>
     <div class="col-md-4">
@@ -395,7 +395,7 @@
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
