--- a/veranda-eaubonne.html
+++ b/veranda-eaubonne.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -170,7 +170,7 @@
     <div class="">
         <section class="slide1 slide3">
   <div class="container">
-    <h1>Votre véranda dans le Val-d'Oise</h1>
+    <h1>Votre véranda à Eaubonne conçue et installée par des professionnels fiables</h1>
   </div>
 </section>
 
@@ -518,7 +518,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
