--- a/veranda-ermont.html
+++ b/veranda-ermont.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -334,16 +334,16 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
           gratuite. Notez qu’une simple déclaration préalable de travaux déposée en mairie est nécessaire si la surface
           à aménager ne dépasse pas les 40 m².
         </p>
-        <h3 style="color:#39a4a8">La fabrication : </h3>
+        <h3 style="color:#39a4a8" class="text-center">La fabrication : </h3>
         <p style="color: white;">Cette étape est assurée par nous. <strong>La véranda à Ermont sera conçue
             minutieusement</strong> grâce à son bureau d’étude et ses centres d’usinages à commandes numériques. La
           toiture sera pré-montée à l’usine et ajustée lors de l’installation.</p>
 
-        <h3 style="color:#39a4a8"> La livraison : </h3>
+        <h3 style="color:#39a4a8" class="text-center"> La livraison : </h3>
         <p style="color: white;"><strong>Votre véranda à Ermont sera livrée entre 8 à 12 semaines après le relevé des
             mesures.</strong> Aucune démarche ne sera nécessaire pour déclencher cette étape.</p>
 
-        <h3 style="color:#39a4a8"> L’installation : </h3>
+        <h3 style="color:#39a4a8" class="text-center"> L’installation : </h3>
         <p style="color: white;">La phase d’installation sera enclenchée après la livraison. Il ne vous restera plus
           qu’à profiter de votre véranda 2 à 4 jours après son installation.</p>
       </div>
@@ -412,12 +412,12 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
           Nous garantissons la longévité de nos installations. <strong>Les matériels qu’on vous propose sont de bonnes
             qualités et fabriqués en France. </strong>
         </p>
-        <h3 style="color:#39a4a8">Bénéficiez de nos vérandas innovantes </h3>
+        <h3 style="color:#39a4a8" class="text-center">Bénéficiez de nos vérandas innovantes </h3>
         <p style="color: white;">Les matériaux que nous utilisons pour la réalisation de votre véranda sont dotés de
           technologie. Certains de nos modèles vous permettront de bénéficier d’un confort thermique en été comme en
           hiver. </p>
 
-        <h3 style="color:#39a4a8"> Une véranda de qualité à mini-prix </h3>
+        <h3 style="color:#39a4a8" class="text-center"> Une véranda de qualité à mini-prix </h3>
         <p style="color: white;">CFV Véranda collabore avec des entreprises qui proposent des prix défiant toute
           concurrence. En plus d’une véranda de qualité, vous l’aurez à mini-prix. N’hésitez plus ! <strong>On est
             joignable au <a href="tel:0682826156" class="link">06 82 82 61 56</a>. </strong></p>
@@ -438,7 +438,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
