--- a/veranda-l-isle-d-adam.html
+++ b/veranda-l-isle-d-adam.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -385,12 +385,12 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
           prix compétitif à l’Isle-Adam. <strong style="color:#39a4a8"> La qualité de nos ouvrages est
             garantie.</strong> Vous bénéficierez également d’une longévité..
         </p>
-        <h3 style="color:#39a4a8">Votre envie d’innovation sera satisfaite en collaborant avec nous</h3>
+        <h3 style="color:#39a4a8" class="text-center">Votre envie d’innovation sera satisfaite en collaborant avec nous</h3>
         <p style="color: white;">Nous mettrons à votre disposition des experts qui vous conseilleront sur les vérandas
           les plus innovantes. Lors de la réalisation de votre projet, on utilisera des matériaux dotés de
           technologies. Cette innovation permettra de concrétiser vos attentes les plus pointues. De plus, le montage
           de votre véranda se fera plus aisément avec l’utilisation de technologie.</p>
-        <h3 style="color:#39a4a8">Design moderne, matériaux de qualité, innovation… à mini-prix </h3>
+        <h3 style="color:#39a4a8" class="text-center">Design moderne, matériaux de qualité, innovation… à mini-prix </h3>
         <p style="color: white;">La plupart de nos collaborateurs sont français. Ils proposent des prix compétitifs.
           Nous choisir, c’est bénéficier d’un travail de qualité à prix défiant toute concurrence. Qu’attendez-vous
           pour nous contacter ?</p>
@@ -447,7 +447,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
