--- a/veranda-sannois.html
+++ b/veranda-sannois.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -375,7 +375,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
       </div>
       <div class="col-md-3 col-sm-6 my-2">
         <h3 class="text-center"><i class="fas fa-euro-sign"></i> Prix compétitif </h3>
-        <p><strong>os produits sont vendus à un prix compétitif</strong>. Nous y parvenons en sélectionnant les sources
+        <p><strong>Nos produits sont vendus à un prix compétitif</strong>. Nous y parvenons en sélectionnant les sources
           de matières premières appropriées, avec des prix équitables, et des techniques de production modernes. </p>
       </div>
       <div class="col-md-3 col-sm-6 my-2">
@@ -548,7 +548,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
