--- a/veranda-val-d-oise.html
+++ b/veranda-val-d-oise.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -287,7 +287,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
         <h2 class="text-center">Quelles sont les raisons pour construire une véranda ?</h2>
         <p>Il existe une multitude de raisons qui motivent à engager des travaux de construction de véranda chez soi.
         </p> <br>
-        <ul>
+        <ul class="ml-3">
           <li>La recherche du confort et du bien-être ;</li>
           <li>Profiter au maximum de l’éclairage naturel ;</li>
           <li>Etendre sa terrasse et profiter de son extérieur presque toute l’année ;</li>
@@ -339,7 +339,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
         <img class="img-responsive center-block" src="./assets/img/MVA_DENNI-1.jpg" alt="veranda en plein val d'oise">
       </div>
       <div class="col-md-6"><br><br>
-        <ul>
+        <ul class="ml-3">
           <li>Nous déterminons le type d’ouvertures que vous souhaitez ainsi que son nombre. Ce pourrait être des baies
             vitrées ou une ouverture sur le toit ;</li>
           <li>Le choix de l’orientation afin d’optimiser les caractéristique bioclimatique de la véranda. Cette
@@ -395,7 +395,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
