--- a/zone-intervention.html
+++ b/zone-intervention.html
@@ -29,12 +29,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
  
-  <title></title>
-<meta property="og:title" content="" />
+  <title>Découvrez nos zones d'intervention - Vérandas de qualités</title>
+<meta property="og:title" content="Découvrez nos zones d'intervention - Vérandas de qualités" />
 <meta property="og:locale" content="fr_FR" />
-<meta name="description" content="" />
-<meta property="og:description" content="" />
-<meta name="keywords" content="" />
+<meta name="description" content="CFV Véranda intervient dans tout le Val-d'Oise et ses environs pour concevoir et installer des vérandas sur mesure. Découvrez notre zone d'intervention !" />
+<meta property="og:description" content="CFV Véranda intervient dans tout le Val-d'Oise et ses environs pour concevoir et installer des vérandas sur mesure. Découvrez notre zone d'intervention !" />
+<meta name="keywords" content="Zone intervention" />
 <link rel="canonical" href="http://localhost:4000/zone-intervention" />
 <meta property="og:url" content="http://localhost:4000/zone-intervention" />
 <meta property="og:site_name" content="" />
@@ -43,8 +43,8 @@
 "@context":"https://schema.org",
 "@type":"WebSite",
 "url":"http://localhost:4000/zone-intervention",
-"description":"",
-"name":""
+"description":"CFV Véranda intervient dans tout le Val-d'Oise et ses environs pour concevoir et installer des vérandas sur mesure. Découvrez notre zone d'intervention !",
+"name":"Découvrez nos zones d'intervention - Vérandas de qualités"
 }
 </script>
 
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -178,7 +178,7 @@
 	<div class="container text-justify">
         <div class="row">
             <div class="col-sm-6">
-                <ul>
+                <ul class="ml-3">
                     <li><a href="./veranda-val-d-oise.html">Veranda Val d'Oise</a></li>
                     <li><a href="./veranda-eaubonne.html">Veranda Eaubonne</a></li>
                     <li><a href="./veranda-ermont.html">Veranda Ermont</a> </li>
@@ -207,7 +207,7 @@
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
