--- a/assets/img/galerie-pergolas-ciel-ouvair.html
+++ b/assets/img/galerie-pergolas-ciel-ouvair.html
@@ -228,7 +228,7 @@
 <section class="realisation">
     <div class="container">
         <nav class="fil-ariane">
-            <ul>
+          <ul class="ml-3">
                 <li><a href="https://www.veranda-95.com/" title="Accueil">Accueil</a></li>
                 <li>></li>
                 <li><a href="#" title="Pergolas bioclimatiques">Pergolas bioclimatiques</a></li>
@@ -272,7 +272,7 @@
 	<footer>
 	<div class="container">
 	<div class="text-center">
-		<ul>
+    <ul class="ml-3">
 			<li><a href="zone-intervention">Zone d'intervention</a></li>
 			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
