--- a/veranda-enghien-les-bains.html
+++ b/veranda-enghien-les-bains.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu">
               <div class="to-d-flex">
                 <li class="">
-                  <a href="./les-aides.html"
+                  <a href="./les-etapes.html"
                     class="py-3 dropdown-item  Navbar_nav-link2 ">
                     <div class="img_menu">
                       <img src="./assets/img/img_menu1.jpg" loading="lazy" alt="menu1">
@@ -386,7 +386,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
           Avec notre entreprise vous pouvez bénéficier de certains privilèges pour la réalisation de votre projet de
           véranda comme :
         </p>
-        <ul>
+        <ul class="ml-3">
           <li class="p">La référence en matière de conception et la réalisation de véranda sur mesure sur Enghien-les-Bains.
           </li>
           <li class="p">Une équipe d’experts qui vous accompagnent et vous orientent sur les meilleures options et alternatives de
@@ -418,7 +418,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
 	<div class="text-center">
 		<ul>
 			<li><a href="./zone-intervention.html">Zone d'intervention</a></li>
-			<li><a href="./mentions-legales.html">Mentions légales </a></li>
+			<li><a href="mentions-legales">Mentions légales </a></li>
 		</ul>
 		</div>
 		<hr>
