--- a/nos-styles.html
+++ b/nos-styles.html
@@ -209,7 +209,7 @@
 </section>
 
 
-<section class="one">
+<section class="one pb-0">
 	<div class="container">
 
 		<h2>La construction de vérandas classiques</h2>
@@ -266,7 +266,6 @@
 		</ul>
 		<p class="p">Un ou plusieurs dômes vitrés peuvent êtres positionnés, tout alu, les chevrons de celui-ci peuvent recevoir des épaisseurs de vitrages pouvant allées jusqu'à 55mm en triple vitrage de toiture, avec contrôle solaire et gaz argon bi couche.</p>
 		<p class="p">Conçu en chevrons tubulaires avec entretoises hautes et basses pour une meilleure étanchéité à l’air et de serreurs à visser pour assurer un placage supérieur du joint sur le vitrage, une véranda Espace²Vie a été validée conforme aux exigences de perméabilité à l’air de la RT2012.</p>
-
 	</div>
 </section>
     </div>
