--- a/renovation-veranda.html
+++ b/renovation-veranda.html
@@ -299,6 +299,9 @@
 					</a>
 				</div>
 			</div>
+		</div>
+		<br>
+		<div class="row">
 			<div class="col-md-4 col-sm-6 my-2">
 				<div class="thumb">
 					<a href="./assets/img/gallery/382-Veranda171-1024x523.jpg" data-toggle="lightbox" data-gallery="gallery">
@@ -325,7 +328,6 @@
 </section>
 
 <hr>
-
 <section class="pre-contact" id="pre-contact">
   <div class="container">
     <div class="row">
@@ -402,8 +404,8 @@
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
       <ul class="px-0">
-        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
-        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
+        <li class="p"><a href="./renovation-veranda.html"><i class="fas fa-chevron-right"></i> Rénovation Véranda </a></li>
+        <li class="p"><a href="./renovation-toiture.html"><i class="fas fa-chevron-right"></i> Rénovation toiture plate</a></li>
       </ul>
     </div>
     <div class="col-md-4">
