--- a/menuiserie.html
+++ b/menuiserie.html
@@ -279,7 +279,6 @@
   </div>
 </section>
 <hr>
-
 <section class="pre-contact" id="pre-contact">
   <div class="container">
     <div class="row">
@@ -356,8 +355,8 @@
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
       <ul class="px-0">
-        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
-        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
+        <li class="p"><a href="./menuiserie.html"><i class="fas fa-chevron-right"></i> Menuiserie </a></li>
+        <li class="p"><a href="./volets-roulants.html"><i class="fas fa-chevron-right"></i> Volets roulants</a></li>
       </ul>
     </div>
     <div class="col-md-4">
