--- a/pergolas-classique.html
+++ b/pergolas-classique.html
@@ -288,7 +288,6 @@
   </div>
 </section>
 <hr>
-
 <section class="pre-contact" id="pre-contact">
   <div class="container">
     <div class="row">
@@ -365,8 +364,8 @@
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
       <ul class="px-0">
-        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
-        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
+        <li class="p"><a href="./pergolas-bio.html"><i class="fas fa-chevron-right"></i> Pergolas bio-climatiques </a></li>
+        <li class="p"><a href="./pergolas-classique.html"><i class="fas fa-chevron-right"></i> Pergolas classiques</a></li>
       </ul>
     </div>
     <div class="col-md-4">
